--- a/style.css
+++ b/style.css
@@ -1,45 +1,70 @@
+*{
+    margin:0; 
+    padding:0;
+}
 body{
-    background-color:white;
+    
+    background-image: url("https://img.freepik.com/vector-gratis/tonos-azules-fondo-acuarela_91008-275.jpg?w=1380&t=st=1664198064~exp=1664198664~hmac=a7546bd31baa2e975b4d297003017a628a3c0500374f0e7aca2fac453ab5645b");
+    background-size: 100% 150%;
+    background-repeat: no-repeat;
+  }
+header{
+    width: 100%;
+    overflow: hidden;
+    background-color:#3A3B43;
+    margin-bottom: 15px;
 }
-img{
-    height: auto;
-    width: 150px;
-    float: right;
-    border: 0ch;
-   
+header nav {
+	float:right;
+	line-height:200px;
 }
-h1{
-    text-align:center;
+header nav a:hover {
+	background:#394EE6;
+	border-radius:50px;
+}
+.wrapper{
+    width: 90%;
+    max-width: 1000px;
+    margin:auto;
+    overflow: hidden;
+}
+header .logo{
+    color: #ffffff;
+    font-size:  80px;
+    line-height: 200px;
+    float:left;
+    font-family: Copperplate, Copperplate Gothic Light, fantasy
+    
+  
     
 }
-table,tr,td{
-    margin: auto;
-    border: 1px solid black;
-    padding: 10px;
-    border-collapse: collapse;
- 
+header nav a {
+	display:inline-block;
+	color:#fff;
+	text-decoration:none;
+	padding:10px 20px;
+	line-height:normal;
+	font-size:20px;
+	font-weight:bold;
+    /*
+	-webkit-transition:all 500ms ease;
+	-o-transition:all 500ms ease;
+	transition:all 500ms ease;
+    */
 }
-tr:hover{
-   color: rgb(14, 11, 11);
-   background-color: rgba(255, 255, 255, 0);
-    
-}
-td:hover{
-    color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0);
-     
- }
-td{
-    background-color: rgb(232, 241, 252);
-}
-tr{
-    background-color: rgb(39, 124, 163);
-}
-
 
 footer{
-    width: 100%;
+
     background-color: rgb(39, 36, 36);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
     color: white;
-    text-align:center;
+    text-align: center;
+}
+.img{
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
 }
