--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+
 *{
     margin:0; 
     padding:0;
 }
 body{
     
-    background-image: url("https://img.freepik.com/vector-gratis/tonos-azules-fondo-acuarela_91008-275.jpg?w=1380&t=st=1664198064~exp=1664198664~hmac=a7546bd31baa2e975b4d297003017a628a3c0500374f0e7aca2fac453ab5645b");
+    background-image: url("https://fondosmil.com/fondo/65203.jpg");
     background-size: 100% 150%;
     background-repeat: no-repeat;
   }
-header{
+  header{
     width: 100%;
     overflow: hidden;
-    background-color:#3A3B43;
+    background-color: #072146;
     margin-bottom: 15px;
 }
 header nav {
@@ -23,19 +25,17 @@ header nav a:hover {
 	border-radius:50px;
 }
 .wrapper{
-    width: 90%;
-    max-width: 1000px;
+    width: 100%;
+    max-width: 1500px;
     margin:auto;
     overflow: hidden;
 }
 header .logo{
-    color: #ffffff;
+    color: white;
     font-size:  80px;
     line-height: 200px;
     float:left;
-    font-family: Copperplate, Copperplate Gothic Light, fantasy
-    
-  
+    font-family: 'Dancing Script'; 
     
 }
 header nav a {
@@ -46,22 +46,42 @@ header nav a {
 	line-height:normal;
 	font-size:20px;
 	font-weight:bold;
-    /*
 	-webkit-transition:all 500ms ease;
 	-o-transition:all 500ms ease;
 	transition:all 500ms ease;
-    */
+    
 }
 
 footer{
 
-    background-color: rgb(39, 36, 36);
+    background-color: #0e3061;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 110px;
     color: white;
+    padding-top: 30px;
     text-align: center;
+    font-family: 'alegreya-light';
+    font-size:18px;
+    margin-top:48px;
+    
+}
+
+footer .service{
+    padding-top: 18px;
+    text-align: center;
+    padding-bottom: 10px;
+    
+}
+footer .service a{
+    color: white;
+    
+}
+footer img{
+    width: 30px;
+    height: 30px;
+
 }
 .img{
     padding-top: 50px;
