--- a/style_css.css
+++ b/style_css.css
@@ -1,45 +1,66 @@
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin:0; 
+    padding:0;
 }
-
 body{
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-    background-image: url("https://img.freepik.com/vector-gratis/tonos-azules-fondo-acuarela_91008-275.jpg?w=1380&t=st=1664198064~exp=1664198664~hmac=a7546bd31baa2e975b4d297003017a628a3c0500374f0e7aca2fac453ab5645b");
+    
+    background-image: url(./img/6.jpg);
     background-size: 100% 150%;
     background-repeat: no-repeat;
-}
+    text-align: center;
+  }
 h3,h4{
     text-align: center;
 }
-
-.wrapper{
-    width: 90%;
-    max-width: 1000px;
-    margin:auto;
-    overflow: hidden;
-    
-}
-header .logo{
-    color: #fff;
-    font-size:  80px;
-    line-height: 200px;
-    font-family: Copperplate, Copperplate Gothic Light, fantasy;
-    text-align: center;
+.tarjeta p,li,pre{
   
+    text-align: left;
 }
+
+
 header{
     width: 100%;
     overflow: hidden;
+    background-color: #072146;
     margin-bottom: 15px;
-    margin-top: 20px;
-    background-color:#3A3B43;
-   
+}
+header nav {
+	float:right;
+	line-height:200px;
+}
+header nav a:hover {
+	background:#394EE6;
+	border-radius:50px;
+}
+.wrapper{
+    width: 100%;
+    max-width: 1500px;
+    margin:auto;
+    overflow: hidden;
+}
+header .logo{
+    color: #ffffff;
+    font-size:  80px;
+    line-height: 200px;
+    float:left;
+    font-family: 'Dancing Script'; 
+    
+  
+    
+}
+header nav a {
+	display:inline-block;
+	color:#fff;
+	text-decoration:none;
+	padding:10px 20px;
+	line-height:normal;
+	font-size:20px;
+	font-weight:bold;
+	-webkit-transition:all 500ms ease;
+	-o-transition:all 500ms ease;
+	transition:all 500ms ease;
+    
 }
 
 .tarjeta img{
@@ -76,9 +97,19 @@ header{
    display: inline-block;
    padding: 10px;
    margin-top: 20px;
-   color:rgb(0, 0, 0);
+   color:rgb(255, 255, 255);
+   font-size:22px;
+   font-family: Arial Black; 
    border: 1px solid rgb(0, 0, 0);
    border-radius: 4px;
+   background-color: #4894ff;
+   border: 1px solid #4894ff;
+   outline: none;
+   transition: 0.7s ease-in-out;
+  
+}
+.tarjeta .contenido a:hover{
+    background-color: #1e67a3;
 }
 
 /* estilo para la tabla*/
@@ -95,16 +126,62 @@ table,tr,td{
     border: 1px solid black;
     padding: 10px;
     border-collapse: collapse;
- 
 }
 table tr:hover{
-    background-color: white;
+    background-color: rgb(205, 231, 255);
   
 }
 table th{
-    background-color: rgb(39, 124, 163);
+    background-color: black;
+    color: white;
 }
 tr{
-    background-color: rgb(232, 241, 252);  
+    background-color: #ffffff;  
+   
+}
+h1{
+ 
+    font-family: 'Dancing Script',cursive; 
+    font-weight: bold; 
+    font-size: 50px; 
+    color: rgb(8, 8, 8); 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #acacac, 0 6px 1px rgba(0,0,0,0.1), 0 0 5px rgba(0,0,0,0.1), 0 1px 3px rgba(0,0,0,0.3), 0 3px 5px rgba(0,0,0,0.2), 0 5px 10px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.2), 0 20px 20px rgba(0,0,0,0.15);
+    display: inline-block;
+    position: relative;
+
+    
+}
+h1::after,h1::before{
+    content: '';
+    position: absolute;
+    width: 120px;
+    height: 3px;
+    background-color: currentColor;
+    top: 1.7em;
+ 
+
+    
+}
+h1::before{
+    left: -140px;
+}
+h1::after{
+    right: -140px;
+}
+h3{
+    font-family: Arial Black;
+    padding-top: 15px;
+    padding-bottom: 20px;
+    font-size: 30px; 
+    
+}
+h4{
+ 
+    font-family: Arial Black;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 18px; 
    
 }
